AZUREUS CHANGELOG
---------


2004.07.xx | Azureus 2.1.0.5

BUGFIX: Core | Throw an error message if existing data file length is too large [Nolar]




2004.07.08 | Azureus 2.1.0.4

FEATURE: Core | Show built-in plugins in config view [Parg]
FEATURE: Core | Fallback encoding for torrents (a-zA-Z0-9 type encoding with hex chars for others) [Parg]
FEATURE: Core | Numbers now localized to selected language [TuxPaper]
FEATURE: Core | More "polite" hash checking...doesn't stress the cpu/system as much [Nolar]
FEATURE: Core | Tracker seed retention limit added to limit tracker memory on torrents with high seed counts [Parg]
FEATURE: Core | Show Bad ips/banned ips in ipfilter window + allow clear/reset [Parg]
FEATURE: Core | Option to start torrents in a stopped state [Parg]
FEATURE: Core | Torrent removal rules. Initially to handle unauthorised torrents + AZ update torrents [Parg]
FEATURE: Dev  | More features for torrent creation [Parg]
FEATURE: UI   | New peer columns to help track leechers [TuxPaper]
FEATURE: Plug | Experimental data upload facility for tracker web pages [Parg]
FEATURE: Plug | WebUI support for "host" operation [Parg]
FEATURE: Plug | Run the web interface standalone (outside of a browser) [Parg]
FEATURE: Plug | Option to keep hold of UPnP port mappings when closing Azureus [Parg]

CHANGE: Core | More sensible merging of plugin.properties on plugin update [Parg]
CHANGE: Core | Retuned tracker connect failure retry interval [Nolar]
CHANGE: Core | Torrents downloaded by URL now named after torrent if not already .torrent [Parg]
CHANGE: Core | Performance of ipfilter checking improved [Parg]
CHANGE: Plug | Green colour used on tracker web pages now more legible [Nolar]

BUGFIX: Core | 99.X% / continuous hash fails fix [Parg]
BUGFIX: Core | Basic plugin config model parameters not working in non-swt (e.g. console) mode [Parg]
BUGFIX: Core | Fix for 'completed' announce event not being sent on occasion [Nolar]